--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>My dearest <strong>Bibika</strong>,</p>
+				<p>My dearest <strong>Name</strong>,</p>
 				<p>today is a day that is all about you,</p>
 				<p>and I want you to know</p>
 				<p>just how much you mean to me.</p>
@@ -173,7 +173,7 @@
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
-				<p><strong>My Love Putli</strong></p>
+				<p><strong>My Love Name</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
